# htmlgen-cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.claude/: settings.local.json
include/: bootstrap.h  html_basic.h  html_core.h  html_form.h  html_forward.h  html_gen.h  html_gen_charts.h  html_gen_resources.h  html_interactive.h  html_media.h  html_misc.h  html_resources.h  html_semantic.h  html_table.h  html_tags.h
planning/: bootstrap_modernization.md  header_only_conversion.md  variadic_constructors.md
source/: bootstrap.cpp  html_tags.cpp
src/: bootstrap.cpp  html_gen.cpp  html_gen_charts.cpp  html_resources.cpp  html_tags.cpp
src/resources/: apexcharts_js.cpp  bootstrap_css.cpp  bootstrap_js.cpp
tests/: CMakeLists.txt  test_10_basic_elements.cpp  test_11_attributes.cpp  test_12_fluent_api.cpp  test_20_table_elements.cpp  test_21_form_elements.cpp  test_22_semantic_elements.cpp  test_25_media_elements.cpp  test_30_bootstrap.cpp  test_30_page_context.cpp  test_31_charts.cpp  test_40_showcase.cpp  test_70_output_pages.cpp  test_80_playground_report.cpp  test_81_playground_generated.cpp  test_html_tags.cpp  test_main.cpp
tests/output/: custom.js  data.js  generated_output.html  playground_report.html  playground_report_concise.html
tools/: compare_html.py  generate_resources.py  html_to_cpp.py
